Added version number, install targets
The first official release! A version number function has been added to
the API and there is now an install and dist target.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 *.a
-block
 *.gcda
 *.gcno
+*.gcov
 *.log
 *.o
-pickle
-picol
-*.gcov
+*.tgz
 afl/
 afl/*
+block
+install/*
+match
+pickle
+picol
 small
 unit
-match
