Added a header only implementation
* Removed redundant documentation from "readme.md".
* Added a Header-Only implementation of the pickle interpreter along
  with a makefile target. This will become the default implementation.
* Removed white-space at end of lines.
* Other minor changes, mostly to the single file header only version to
  make it better as a header-only library.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 *.1
 *.a
+*.dll
 *.exe
 *.gcda
 *.gcno
 *.gcov
 *.log
 *.o
+*.so
 *.tgz
 callgrind.*
 debug
@@ -14,4 +16,5 @@ install/*
 micro
 pickle
 profile
+single
 small
